examples/Passing/Compound/other_foo.c
int main() {
    int foo = 100;
    {
        int foo;
        foo = 15;
    }
    return foo;
}
