examples/Failing/Compound/fail_access.c
int main () {
    {
        int foo = 2;
    }

    return foo;
}
